<resources>
    <string name="app_name">Quản lý bán hàng</string>
    // title
    <string name="title_settings">Cài đặt chung</string>
    <string name="title_board">Thanh toán</string>
    <string name="title_sell">Bán hàng</string>
    <string name="title_list_drink_and_food">Danh mục món</string>
    <string name="title_add_drink_and_food">Thêm món mới</string>
    // menu
    <string name="text_menu_sell">BÁN HÀNG</string>
    <string name="text_menu_quick_payment">THANH TOÁN NHANH</string>
    <string name="text_menu_settings">CÀI ĐẶT</string>
    <string name="text_menu_help">GIÚP ĐỠ</string>
    // board
    <string name="board_number">Bàn %d</string>
    <string name="board_activity_board">Bàn: </string>
    <string name="board_activity_total_money">Tổng: </string>
    <string name="board_activity_save">Lưu</string>
    <string name="board_activity_pay">Thanh toán</string>
    <string name="text_view_customers_pay">Khách đưa:</string>
    <string name="text_view_refunds_to_customers">Tiền trả lại : </string>
    <string name="msg_not_commodity_selected">Không có danh sách món gọi</string>
    <string name="text_save_data_ok">Cập nhật dữ liệu thành công</string>
    <string name="text_board_cancel_board_commodity">Hủy đơn hàng</string>
    <string name="text_dialog_msg_cancel_board_commodity">Bạn có muốn hủy đơn hàng này không ?</string>
    // payment
    <string name="text_button_pay_number_0">0</string>
    <string name="text_button_pay_number_00">00</string>
    <string name="text_button_pay_number_000">000</string>
    <string name="text_button_pay_number_1">1</string>
    <string name="text_button_pay_number_2">2</string>
    <string name="text_button_pay_number_3">3</string>
    <string name="text_button_pay_number_4">4</string>
    <string name="text_button_pay_number_5">5</string>
    <string name="text_button_pay_number_6">6</string>
    <string name="text_button_pay_number_7">7</string>
    <string name="text_button_pay_number_8">8</string>
    <string name="text_button_pay_number_9">9</string>
    <string name="text_button_pay_clear_all">Nhập lại tiền</string>
    <string name="text_button_pay_exactly">Chính xác</string>
    <string name="text_button_pay_back">Xóa cuối</string>
    <string name="text_button_pay">Thanh toán</string>
    <string name="text_board_order">Chọn món</string>
    <string name="text_board_order_bottom">Chọn món</string>
    <string name="msg_user_not_edit_money">Khách hàng chưa trả tiền</string>
    // setting
    <string name="text_setting_group_commodity">Nhóm thực đơn</string>
    <string name="text_setting_drink_and_food">Đồ uống, món ăn</string>
    <string name="text_setting_map_room_board"> Sơ đồ phòng, bàn</string>
    // room board
    <string name="text_room_board_add">Thêm</string>
    <string name="edit_room_board_hint_name_board">Tên bàn</string>
    // drink food
    <string name="edit_drink_food_hint_name_commodity">Tên món ăn</string>
    <string name="edit_drink_food_hint_cost_commodity">Giá bán lẻ</string>
    <string name="text_add">Thêm</string>
    //
    <string name="text_yes">Có</string>
    <string name="text_no">Không</string>
    <string name="text_add_drink_food_common_commodity">Thuộc nhóm hàng phổ biến</string>
    <string name="text_add_drink_food_group_commodity">Nhóm hàng</string>
    <string name="text_add_drink_food_currency_unit">đồng</string>
    <string name="msg_add_drink_food_success">Thêm mặt hàng thành công</string>
    <string name="msg_add_drink_food_cost_failed">Giá tiền sản phẩm không thể thấp hơn 1000 đồng</string>
    <string name="msg_add_drink_food_name_empty">Tên món ăn không được để trống</string>
    <string name="text_group_board_opening">Đang mở</string>
    //
    <string name="text_dialog_delete_commodity">Xóa sản phẩm</string>
    <string name="text_dialog_msg_delete_commodity">Bạn có xóa sản phẩm này không ?</string>
    <string name="text_dialog_msg_delete_commodity_common">Bạn có xóa sản phẩm này khỏi nhóm phổ biến không ?</string>
    // setting add room
    <string name="msg_add_board_name_empty">Tên bàn không được để trống</string>
</resources>
